<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393946"
    android:orientation="vertical"
    tools:context="com.example.jyiu.businessinfoapp.MainActivity">

    <ImageView
        android:id="@+id/quay_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:elevation="4dp"
        android:src="@drawable/quay_logo2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/business_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo_of_quay_restaurant"
                android:src="@drawable/quay_photo" />

            <TextView
                android:id="@+id/Quay_Summary_Title"
                style="@style/headerTitleTheme"
                android:layout_marginTop="20dp"
                android:text="@string/summary" />

            <TextView
                android:id="@+id/business_info"
                style="@style/textTheme"
                android:breakStrategy="balanced"
                android:justificationMode="inter_word"
                android:text="@string/business_info" />

            <TextView
                android:id="@+id/opening_hours"
                style="@style/headerTitleTheme"
                android:layout_marginTop="20dp"
                android:text="@string/opening_hours" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lunch_service"
                    style="@style/textTheme"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/lunch_service" />

                <TextView
                    android:id="@+id/dinner_service"
                    style="@style/textTheme"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/dinner_service" />
            </RelativeLayout>

            <TextView
                android:id="@+id/Location"
                style="@style/headerTitleTheme"
                android:layout_marginTop="20dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/address"
                style="@style/textTheme"
                android:text="@string/address" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
